--- a/frontend/src/styles/pages/pages.scss
+++ b/frontend/src/styles/pages/pages.scss
@@ -17,8 +17,10 @@ html, body {
 }
 
 .ct-content {
-  overflow-x: hidden;
+  box-sizing: border-box;
+  height: 100%;
   padding: 70px 20px 0;
+  overflow-x: hidden;
 }
 
 .ct-page-container {
